--- a/brew/src/components/Onpoint/section2/section2.less
+++ b/brew/src/components/Onpoint/section2/section2.less
@@ -1,4 +1,14 @@
 .Section2 {
+  &__background {
+    position: absolute;
+    top: 0;
+    left: 0;
+    z-index: -1;
+  }
+  &__content {
+    position: relative;
+    z-index: 0;
+  }
   &__ice {
     img {
       height: 100%;
