--- a/brew/src/Pages/Onpoint/onpoint.css
+++ b/brew/src/Pages/Onpoint/onpoint.css
@@ -1,6 +1,5 @@
 .Onpoint {
   position: relative;
-  --n: 0;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -8,26 +7,25 @@
   -webkit-box-direction: normal;
       -ms-flex-direction: column;
           flex-direction: column;
-  overflow: hidden;
   width: 100%;
   width: 100vw;
   height: 100vh;
-  height: calc(var(--n) * 100vh);
-  -webkit-transform: translateY(calc(var(--i, 0) / var(--n) * -100%));
-          transform: translateY(calc(var(--i, 0) / var(--n) * -100%));
-  background-size: cover;
+  overflow-x: hidden;
+  overflow-y: scroll;
+  -ms-scroll-snap-type: y mandatory;
+      scroll-snap-type: y mandatory;
+  background-attachment: local;
+  background-size: contain;
 }
 .Onpoint section {
-  width: 100%;
-  width: 100vw;
-  height: 100%;
-  height: calc(100% / var(--n));
+  height: 100vh;
+  scroll-snap-align: center;
   position: relative;
 }
 .Background {
   position: absolute;
   width: 100%;
-  -webkit-transform: translateY(calc(var(--i, 0) / var(--n) * -100%));
-          transform: translateY(calc(var(--i, 0) / var(--n) * -100%));
+  background-attachment: local;
+  background-size: contain;
 }
 /*# sourceMappingURL=onpoint.css.map */
