--- a/brew/src/Pages/Onpoint/onpoint.less
+++ b/brew/src/Pages/Onpoint/onpoint.less
@@ -1,22 +1,19 @@
 .Onpoint {
   position: relative;
-  --n: 0;
   display: flex;
   flex-direction: column;
-  overflow: hidden;
   width: 100%;
   width: 100vw;
   height: 100vh;
-  height: calc(var(--n) * 100vh);
-  transform: translateY(calc(var(--i, 0) / var(--n) * -100%));
-  background-size: cover;
+  overflow-x: hidden;
+  overflow-y: scroll;
+  scroll-snap-type: y mandatory;
+  background-attachment: local;
+  background-size: contain;
 
   section {
-    width: 100%;
-    width: 100vw;
-    height: 100%;
-    height: calc(100% / var(--n));
-    //background-color: #232498;
+    height: 100vh;
+    scroll-snap-align: center;
     position: relative;
   }
 }
@@ -24,5 +21,6 @@
 .Background {
   position: absolute;
   width: 100%;
-  transform: translateY(calc(var(--i, 0) / var(--n) * -100%));
+  background-attachment: local;
+  background-size: contain;
 }
