--- a/brew/src/components/Onpoint/section2/section2.css
+++ b/brew/src/components/Onpoint/section2/section2.css
@@ -1,3 +1,13 @@
+.Section2__background {
+  position: absolute;
+  top: 0;
+  left: 0;
+  z-index: -1;
+}
+.Section2__content {
+  position: relative;
+  z-index: 0;
+}
 .Section2__ice img {
   height: 100%;
 }
