--- a/brew/src/index.css
+++ b/brew/src/index.css
@@ -39,26 +39,14 @@ code {
 }
 
 .parallax {
-  /* Display and position the pseudo-element */
   content: " ";
   position: absolute;
   top: 0;
   right: 0;
   bottom: 0;
   left: 0;
-
-  /* Move the pseudo-element back away from the camera,
-   * then scale it back up to fill the viewport.
-   * Because the pseudo-element is further away, it appears to move more slowly, like in real life. */
-  /*transform: translate3d(0,0,-1px);*/
-  /*-webkit-transform: translate3d(0,0,-1px);*/
-
   transform: translateZ(-1px) scale(1.5);
   -webkit-transform: translateZ(-1px) scale(1.5);
-
-  /* Force the background image to fill the whole element. */
-  /*background-size: 100%;*/
-  /* Keep the image from overlapping sibling elements. */
   z-index: -1;
   background-position: center;
   background-repeat: no-repeat;
@@ -66,17 +54,10 @@ code {
 }
 
 .wrapper {
-  /* The height needs to be set to a fixed value for the effect to work.
-   * 100vh is the full height of the viewport. */
-  height: 100vh;
-  /* The scaling of the images would add a horizontal scrollbar, so disable x overflow. */
   overflow-x: hidden;
-  /* Enable scrolling on the page. */
   overflow-y: auto;
-  /* Set the perspective to 2px. This is essentailly the simulated distance from the viewport to transformed objects.*/
   perspective: 2px;
   -webkit-perspective: 2px;
-  margin-left: -2px;
 }
 
 /* Parallax end */
@@ -94,7 +75,11 @@ code {
 }
 
 @font-face {
-  font-family: 'Gotham Pro';
-  font-weight: 400;
-  src: url("./assets/fonts/GothamPro.ttf") format("ttf");
+  font-family: "Gotham Pro";
+  src: url("./assets/fonts/GothamProRegular/GothamProRegular.eot");
+  src: url("./assets/fonts/GothamProRegular/GothamProRegular.eot?#iefix")format("embedded-opentype"),
+  url("./assets/fonts/GothamProRegular/GothamProRegular.woff") format("woff"),
+  url("./assets/fonts/GothamProRegular/GothamProRegular.ttf") format("truetype");
+  font-style: normal;
+  font-weight: normal;
 }
